--- a/js-to-python-converter/package.json
+++ b/js-to-python-converter/package.json
@@ -1,11 +1,19 @@
 {
   "name": "convert-js2py",
-  "version": "1.1.3",
+  "version": "1.1.5",
   "description": "Convert JavaScript code to Python code",
   "main": "lib/index.js",
   "bin": {
     "js-to-python": "bin/js-to-python.js"
   },
+  "keywords": [
+    "javascript",
+    "python",
+    "code conversion",
+    "transpiler",
+    "programming",
+    "development"
+  ],
   "dependencies": {
     "espree": "^9.6.1",
     "estraverse": "^5.3.0"
